Catalog Api test edildi  4  entity çalışıyor . MongoDB ile...

--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -6,7 +6,7 @@
     "ProductImageCollectionName": "ProductImages",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MultiShopCatalogDb"
-  } // Catalog MongoDb  kısmı !
+  }, // Catalog MongoDb  kısmı !
   "Logging": {
     "LogLevel": {
       "Default": "Information",
