--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -7,6 +7,8 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MultiShopCatalogDb"
   }, // Catalog MongoDb  kısmı !
+  "IdentityServerUrl": "http://localhost:5001",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
