--- a/Services/Discount/MultiShop.Discount/appsettings.json
+++ b/Services/Discount/MultiShop.Discount/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-SP67UG4\\SQLEXPRESS;initial Catalog=MultiShopDiscountDb;integrated Security=true"
   },
+  "IdentityServerUrl": "http://localhost:5001",
 
   "Logging": {
     "LogLevel": {
