Anasayfa düzenlemeleri ve birçok sınıf dinamik hale getirildi. Admin - UI taraflarında.

--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -4,6 +4,9 @@
     "ProductCollectionName": "Products",
     "ProductDetailCollectionName": "ProductDetails",
     "ProductImageCollectionName": "ProductImages",
+    "FeatureSliderCollectionName": "FeatureSliders",
+    "SpecialOfferCollectionName": "SpecialOffers",
+    "FeatureCollectionName": "Features",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MultiShopCatalogDb"
   }, // Catalog MongoDb  kısmı !
