--- a/Services/Catalog/MultiShop.Catalog/appsettings.json
+++ b/Services/Catalog/MultiShop.Catalog/appsettings.json
@@ -7,6 +7,9 @@
     "FeatureSliderCollectionName": "FeatureSliders",
     "SpecialOfferCollectionName": "SpecialOffers",
     "FeatureCollectionName": "Features",
+    "OfferDiscountCollectionName": "OfferDiscounts",
+    "BrandCollectionName": "Brands",
+    "AboutCollectionName": "Abouts",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "MultiShopCatalogDb"
   }, // Catalog MongoDb  kısmı !
