Ocelot Gateway oluşturuldu ve projeye  entegre edildi (Identity server jwtleri ile çalışıyor...).

--- a/ApiGateway/MultiShop.OcelotGateway/Properties/launchSettings.json
+++ b/ApiGateway/MultiShop.OcelotGateway/Properties/launchSettings.json
@@ -1,20 +1,18 @@
 ﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49440",
-      "sslPort": 44396
+      "applicationUrl": "http://localhost:31513",
+      "sslPort": 0
     }
   },
   "profiles": {
-    "MultiShop.Basket": {
+    "MultiShop.OcelotGateway": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:7074;",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +20,6 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
