--- a/Services/Payment/MultiShop.Payment/Properties/launchSettings.json
+++ b/Services/Payment/MultiShop.Payment/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49440",
-      "sslPort": 44396
+      "applicationUrl": "http://localhost:10785",
+      "sslPort": 44320
     }
   },
   "profiles": {
-    "MultiShop.Basket": {
+    "MultiShop.Payment": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:7074;",
+      "applicationUrl": "https://localhost:7076",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
