--- a/Services/Cargo/MultiShop.Cargo.WebAPI/Properties/launchSettings.json
+++ b/Services/Cargo/MultiShop.Cargo.WebAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,// tarayıcıda acma 
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7073;",
+      "applicationUrl": "http://localhost:7073;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
