--- a/Services/Images/MultiShop.Image/Properties/launchSettings.json
+++ b/Services/Images/MultiShop.Image/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49440",
-      "sslPort": 44396
+      "applicationUrl": "http://localhost:31363",
+      "sslPort": 44375
     }
   },
   "profiles": {
-    "MultiShop.Basket": {
+    "MultiShop.Image": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:7074;",
+      "applicationUrl": "http://localhost:7077",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
