Sorun  çözüldü kütüphaneler  indirildi ...

--- a/Frontends/MultiShot.WebUI/Properties/launchSettings.json
+++ b/Frontends/MultiShot.WebUI/Properties/launchSettings.json
@@ -3,16 +3,16 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:43002",
-      "sslPort": 44384
+      "applicationUrl": "http://localhost:18716",
+      "sslPort": 44325
     }
   },
   "profiles": {
-    "MultiShot.WebUI": {
+    "MultiShop.WebUI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7062;http://localhost:5116",
+      "applicationUrl": "https://localhost:7062;http://localhost:5178",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
