--- a/Services/Message/MultiShop.Message/Properties/launchSettings.json
+++ b/Services/Message/MultiShop.Message/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7078",
+      "applicationUrl": "http://localhost:7078",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
